--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,14 @@ cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
 configobj==5.0.6
+CurrencyConverter==0.17
 dnspython==2.2.1
 email-validator==1.2.1
 fastapi==0.79.0
 fastapi-jwt-auth==0.5.0
+forex-python==1.8
 greenlet==1.1.2
+gunicorn==20.1.0
 h11==0.13.0
 humanize==4.3.0
 idna==3.3
@@ -30,11 +33,13 @@ pycparser==2.21
 pydantic==1.9.1
 Pygments==2.13.0
 PyJWT==1.7.1
+pysqlite3==0.4.7
 python-dateutil==2.8.2
 python-decouple==3.6
 pytz==2022.1
 requests==2.28.1
 setproctitle==1.3.2
+simplejson==3.17.6
 six==1.16.0
 sniffio==1.2.0
 soupsieve==2.3.2.post1
