--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 
+# conn_str:str
 con_str = "postgres://YourUserName:YourPassword@YourHostname:5432/YourDatabaseName"
 
+# secret:str
 secret = '<your hex secret>'
 
+# host:str
 host = '<host>'
 
-port = <port>
+# port:int 
+port = 0000
